--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -7,16 +7,18 @@ on:
 
 jobs:
   format-check:
+    name: Check Code Formatting with Black
     runs-on: ubuntu-latest
 
     steps:
-      - name: Python Black Formatter Check
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
 
       - name: Install Black
         run: pip install black
@@ -24,7 +26,32 @@ jobs:
       - name: Run Black check
         run: black --check --verbose .
 
+  test:
+    name: Run API Route Tests
+    needs: format-check
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          cache: 'pip'
+
+      - name: Install Dependencies
+        run: |
+          pip install --no-cache-dir -r requirements.txt
+
+      - name: Run Tests
+        run: pytest test_app_routes.py --disable-warnings
+
+
   Continuous-Integration:
+    name: Build and Push Docker Image
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
