--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -46,6 +46,8 @@ jobs:
           pip install --no-cache-dir -r requirements.txt
 
       - name: Run Tests
+        env:
+          PYTHONPATH: .
         run: pytest -v tests/test_app_routes.py
 
 
