--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 
-jobs:
+# jobs:
   # format-check:
   #   name: Check Code Formatting with Black
   #   runs-on: ubuntu-latest
@@ -49,7 +49,8 @@ jobs:
   #         PYTHONPATH: .
   #       run: pytest -v tests/test_app_routes.py
 
-
+jobs:
+  
   Continuous-Integration:
     name: Build and Push Docker Image
     needs: test
