--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -82,9 +82,9 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .  
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-          
+
       - name: Output Image Value
-        run: echo "${{ needs.Continuous-Integration.outputs.image }}"
+        run: echo "${{ steps.build-image.outputs.image }}"
 
   # Continuous-Deployment:
   #   name: Deploy to AWS ECS
