--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -86,35 +86,38 @@ jobs:
       - name: Output Image Value
         run: echo "${{ steps.build-image.outputs.image }}"
 
-  # Continuous-Deployment:
-  #   name: Deploy to AWS ECS
-  #   needs: Continuous-Integration
-  #   runs-on: ubuntu-latest
+  Continuous-Deployment:
+    name: Deploy to AWS ECS
+    needs: Continuous-Integration
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-  #     - name: Update ECS Task Definition
-  #       id: update-task-definition
-  #       uses: aws-actions/amazon-ecs-render-task-definition@v1
-  #       with:
-  #         task-definition-file: ${{ secrets.ECS_TASK_DEFINITION }}
-  #         container-name: generative_ai_app
-  #         image: ${{ needs.Continuous-Integration.outputs.image }}
+      - name: Create ECS task definition file from secret
+        run: echo '${{ secrets.ECS_TASK_DEFINITION }}' > ecs-task-definition.json
 
-      # - name: Deploy to Amazon ECS Service
-      #   id: deploy-ecs
-      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      #   with:
-      #     service: generativeai-model-task-service-7qkuks8l  
-      #     cluster: generativeai_model 
-      #     task-definition: ${{ steps.update-task-definition.outputs.task-definition-file }}
-      #     wait-for-service-stability: true 
+      - name: Update ECS Task Definition
+        id: update-task-definition
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ecs-task-definition.json
+          container-name: generative_ai_app
+          image: ${{ needs.Continuous-Integration.outputs.image }}
+
+      - name: Deploy to Amazon ECS Service
+        id: deploy-ecs
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          service: generativeai-model-task-service-7qkuks8l
+          cluster: generativeai_model
+          task-definition: ${{ steps.update-task-definition.outputs.task-definition }}
+          wait-for-service-stability: true
