--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [main]
 
-
 jobs:
   format-check:
     name: Check Code Formatting with Black
@@ -76,15 +75,12 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO}}
+          ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO }}
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .  
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-      - name: Output Image Value
-        run: echo "${{ steps.build-image.outputs.image }}"
 
   Continuous-Deployment:
     name: Deploy to AWS ECS
@@ -103,10 +99,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Create ECS task definition file from secret
-        run: echo '${{ secrets.ECS_TASK_DEFINITION }}' > ecs-task-definition.json
+        run: |
+          echo "${{ secrets.ECS_TASK_DEFINITION }}" > ecs-task-definition.json
 
       - name: Output Image Value (Debugging)
-        run: echo ${{ needs.Continuous-Integration.outputs.image }}
+        run: |
+          echo "Image URI: ${{ needs.Continuous-Integration.outputs.image }}"
 
       - name: Update ECS Task Definition
         id: update-task-definition
