--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -42,6 +42,10 @@ jobs:
     - name: Create ECS task definition file from secret
       run: echo "${{ secrets.ECS_TASK_DEFINITION }}" > ecs-task-definition.json
 
+    - name: Debug Task Definition File
+      run: cat ecs-task-definition.json
+
+
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
